# usb-compass

./: Cargo.toml  README.md
board/: Cargo.toml  openocd.gdb
board/.cargo/: config.toml
board/src/: main.rs  message_manager.rs
client/: Cargo.toml
client/src/: error.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  link.rs  message.rs  message_queue.rs
