[package]
authors = ["Trenton Andres <trenton.andres@gmail.com>"]
name = "board"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
common = { path="../common", default-features = false }
serde = { version = "1.0.126", features = ["derive"], default-features = false }
serde_cbor = { version = "0.11", default-features = false }

[dependencies.stm32f3xx-hal]
version = "0.7.0"
features = ["ld", "stm32f303xc", "stm32-usbd", "rt"]


