[package]
authors = ["Trenton Andres <trenton.andres@gmail.com>"]
name = "client"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.8.1", features = ["macros", "time", "rt", "sync"] }
common = { path="../common" }
thiserror = "1.0.26"
rusb = "0.8.1"
env_logger = "0.9.0"
log = "0.4.14"
