[package]
name = "common"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"], default-features = false }
serde-big-array = "0.3.2"
serde_cbor = {version = "0.11", default-features = false }
serial-line-ip = "0.5.0"
static_assertions = "1.1.0"
arr_macro = "0.1.3"

[features]
default = ["std"]
std = ["serde/std", "serde_cbor/std"]
